Fix extra padding on chat input

--- a/src/vs/workbench/contrib/chat/browser/media/chat.css
+++ b/src/vs/workbench/contrib/chat/browser/media/chat.css
@@ -700,7 +700,7 @@ have to be updated for changes to the rules above, or to support more deeply nes
 
 .interactive-session .interactive-input-part {
 	margin: 0px 16px;
-	padding: 12px 0px;
+	padding: 0 0 12px 0px;
 	display: flex;
 	flex-direction: column;
 }
@@ -795,7 +795,7 @@ have to be updated for changes to the rules above, or to support more deeply nes
 }
 
 .interactive-session .interactive-input-part .interactive-input-followups .interactive-session-followups {
-	margin: 8px 0;
+	margin-bottom: 8px;
 }
 
 .interactive-session .interactive-input-part .interactive-input-followups .interactive-session-followups .monaco-button {
